--- a/confirm.html
+++ b/confirm.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Confirmação de dados</title>
     <script src="./confirmDados.js"></script>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
+    <div class="box">
     <form onsubmit="return confirmDados(event)">
       <h1>Preencha e confirme os seus dados</h1>
       <label for="name">Digite seu nome:</label><br />
@@ -17,6 +19,7 @@
         name="name"
         minlength="2"
         maxlength="25"
+        autofocus
         required
       /><br /><br />
       <label for="age">Digite sua idade:</label><br />
@@ -33,9 +36,13 @@
       <label for="gender-m">Masculino</label>
       <input type="radio" id="gender-f" name="gender" value="female" />
       <label for="gender-f">Feminino</label><br /><br />
-      <button onclick="confirmDados()">submit</button>
-      <hr />
-      <p id="result"></p>
+      <button onclick="confirmDados()">enviar</button>
+      </form>
+      </div>
+
+      <div class="result">
+        <p id="result"></p>
+      </div>
     </form>
   </body>
 </html>
