--- a/confirm.html
+++ b/confirm.html
@@ -10,39 +10,38 @@
   </head>
   <body>
     <div class="box">
-    <form onsubmit="return confirmDados(event)">
-      <h1>Preencha e confirme os seus dados</h1>
-      <label for="name">Digite seu nome:</label><br />
-      <input
-        type="text"
-        id="name"
-        name="name"
-        minlength="2"
-        maxlength="25"
-        autofocus
-        required
-      /><br /><br />
-      <label for="age">Digite sua idade:</label><br />
-      <input
-        type="number"
-        id="age"
-        name="age"
-        min="1"
-        max="99"
-        required
-      /><br /><br />
-      <label>Sexo:</label><br />
-      <input type="radio" id="gender-m" name="gender" value="male" required />
-      <label for="gender-m">Masculino</label>
-      <input type="radio" id="gender-f" name="gender" value="female" />
-      <label for="gender-f">Feminino</label><br /><br />
-      <button onclick="confirmDados()">enviar</button>
+      <form onsubmit="return confirmDados(event)">
+        <h1>Preencha e confirme seus dados</h1>
+        <label for="name">Digite seu nome:</label><br />
+        <input
+          type="text"
+          id="name"
+          name="name"
+          minlength="2"
+          maxlength="25"
+          title="Preencha usando apenas letras"
+          autofocus
+          required
+        /><br /><br />
+        <label for="age">Digite sua idade:</label><br />
+        <input
+          type="number"
+          id="age"
+          name="age"
+          min="1"
+          max="99"
+          title="Preencha com 1 a 99"
+          required
+        /><br /><br />
+        <label>Sexo:</label><br />
+        <input type="radio" id="gender-m" name="gender" value="male" required />
+        <label for="gender-m">Masculino</label>
+        <input type="radio" id="gender-f" name="gender" value="female" />
+        <label for="gender-f">Feminino</label><br /><br />
+        <button onclick="confirmDados()">verificar</button>
       </form>
-      </div>
+    </div>
 
-      <div class="result">
-        <p id="result"></p>
-      </div>
-    </form>
+    <p id="result"></p>
   </body>
 </html>
